MODON MRE BPDEV/force-app/main/default/objects/DirectDebit_Transactions__c/DirectDebit_Transactions__c.object-meta.xml
<CustomObject>
    <label>DirectDebit_Transactions</label>
    <nameField>
        <displayFormat>DDT-{0000000}</displayFormat>
        <label>DD Transaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DirectDebit_Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>