MODON MRE BPDEV/force-app/main/default/objects/DirectDebit_Transactions__c/fields/Ack_Nack_Response__c.field-meta.xml
<CustomField>
    <fullName>Ack_Nack_Response__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ack/Nack Response</label>
    <length>100</length>
    <type>Text</type>
</CustomField>