MODON MRE BPDEV/force-app/main/default/objects/DirectDebit_Transactions__c/fields/Bounce_Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Bounce_Reason_Code__c</fullName>
    <description>Reason carried on the Central Bank approved bounce memo retrieved by getPmtBounceDemo. The one captured memo had its reason fields blank, so treat an empty value as unknown rather than as no reason.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Bounce Reason Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>