MODON MRE BPDEV/force-app/main/default/objects/DirectDebit_Transactions__c/fields/CancellationResStatus__c.field-meta.xml
<CustomField>
    <fullName>CancellationResStatus__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CancellationResStatus</label>
    <length>150</length>
    <type>Text</type>
</CustomField>