MODON MRE BPDEV/force-app/main/default/objects/DirectDebit_Transactions__c/fields/DDA_Unique_Number__c.field-meta.xml
<CustomField>
    <fullName>DDA_Unique_Number__c</fullName>
    <formula>Direct_Debit_Request__r.DDA_Unique_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DDA Unique Number</label>
    <type>Text</type>
</CustomField>