MODON MRE BPDEV/force-app/main/default/objects/DirectDebit_Transactions__c/fields/Direct_Debit_Bank__c.field-meta.xml
<CustomField>
    <fullName>Direct_Debit_Bank__c</fullName>
    <formula>TEXT(Direct_Debit_Request__r.Customer_Bank_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Direct Debit Bank</label>
    <type>Text</type>
</CustomField>