MODON MRE BPDEV/force-app/main/default/objects/DirectDebit_Transactions__c/fields/Direct_Debit_Banking_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Direct_Debit_Banking_Reference_Number__c</fullName>
    <formula>Direct_Debit_Request__r.DirectDebit_Authority_Reference_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Direct Debit Banking Reference Number</label>
    <type>Text</type>
</CustomField>