MODON MRE BPDEV/force-app/main/default/objects/DirectDebit_Transactions__c/fields/Direct_Debit_Request__c.field-meta.xml
<CustomField>
    <fullName>Direct_Debit_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Direct Debit Request</label>
    <referenceTo>DirectDebitRequest__c</referenceTo>
    <relationshipLabel>DirectDebit_Transactions</relationshipLabel>
    <relationshipName>DirectDebit_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>