MODON MRE BPDEV/force-app/main/default/objects/DirectDebit_Transactions__c/fields/Direct_Debit_Response__c.field-meta.xml
<CustomField>
    <fullName>Direct_Debit_Response__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Direct Debit Response</label>
    <length>150</length>
    <type>Text</type>
</CustomField>