MODON MRE BPDEV/force-app/main/default/objects/DirectDebit_Transactions__c/fields/DirectDebit_Registration_Response__c.field-meta.xml
<CustomField>
    <fullName>DirectDebit_Registration_Response__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DirectDebit_Registration_Response</label>
    <referenceTo>DirectDebit_Registration_Response__c</referenceTo>
    <relationshipLabel>DirectDebit_Transactions</relationshipLabel>
    <relationshipName>DirectDebit_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>