MODON MRE BPDEV/force-app/main/default/objects/DirectDebit_Transactions__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>dueDate sent on uploadPayments, formatted dd/MM/yyyy on the wire. Must fall inside the mandate window and cannot be in the past. Note the day-end report is keyed on settlement date, not this date, so reconciliation cannot assume they match.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>