MODON MRE BPDEV/force-app/main/default/objects/DirectDebit_Transactions__c/fields/FT_Reference_No__c.field-meta.xml
<CustomField>
    <fullName>FT_Reference_No__c</fullName>
    <description>ftRefNo, the bank funds transfer reference, available from 06:00 the day after settlement. Deliberately NOT unique: two payments in two different files were observed sharing DDS23120100045171, so this covers a settlement batch rather than a payment and must never be used as a key.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>FT Reference No</label>
    <length>50</length>
    <type>Text</type>
</CustomField>