MODON MRE BPDEV/force-app/main/default/objects/DirectDebit_Transactions__c/fields/Gateway__c.field-meta.xml
<CustomField>
    <fullName>Gateway__c</fullName>
    <description>Mirrors the parent mandate&apos;s Gateway so the transaction can be filtered without a join. List views cannot filter on a parent field, so without this every UAEDDS list view and report would be impossible or expensive. Follows the formula pattern already used on this object by DDA_Unique_Number__c, Payer_Identification__c and Escrow_IBAN_Number__c.</description>
    <formula>TEXT(Direct_Debit_Request__r.Gateway__c)</formula>
    <label>Gateway</label>
    <type>Text</type>
</CustomField>