MODON MRE BPDEV/force-app/main/default/objects/DirectDebit_Transactions__c/fields/Payer_Identification__c.field-meta.xml
<CustomField>
    <fullName>Payer_Identification__c</fullName>
    <formula>Direct_Debit_Request__r.Payer_Identification__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payer Identification</label>
    <type>Text</type>
</CustomField>