MODON MRE BPDEV/force-app/main/default/objects/DirectDebit_Transactions__c/fields/Payment_File__c.field-meta.xml
<CustomField>
    <fullName>Payment_File__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The file this payment was submitted in. Set before the callout, so if uploadPayments times out the header still knows exactly which installments were in flight together.</description>
    <label>Payment File</label>
    <referenceTo>DDA_Payment_File__c</referenceTo>
    <relationshipLabel>Direct Debit Transactions</relationshipLabel>
    <relationshipName>Direct_Debit_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>