MODON MRE BPDEV/force-app/main/default/objects/DirectDebit_Transactions__c/fields/Payment_Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Payment_Reason_Code__c</fullName>
    <description>reasonCode from the status and day-end responses. Single character vocabulary: 0 is accepted claimed amount, 1 is accepted partial, and A through Z carry the no-pay reasons. A separate namespace from the Pxx cancellation codes and the RRxx mandate reject codes. Text rather than a picklist so an unrecognised code is captured and flagged, never silently dropped.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Payment Reason Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>