MODON MRE BPDEV/force-app/main/default/objects/DirectDebit_Transactions__c/fields/Payment_Ref_No__c.field-meta.xml
<CustomField>
    <fullName>Payment_Ref_No__c</fullName>
    <description>The full paymentRefNo we sent, in the form {ddaReferenceNumber}-{6 digits}. Retained for reference only. It is NOT a correlation key: UAEDDS returns only the suffix, and in the one upload we can trace the returned suffix did not match the submitted one.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Payment Ref No</label>
    <length>100</length>
    <type>Text</type>
</CustomField>