MODON MRE BPDEV/force-app/main/default/objects/DirectDebit_Transactions__c/fields/Receipt_Acknowledgement__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Acknowledgement__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Receipt Acknowledgement</label>
    <length>150</length>
    <type>Text</type>
</CustomField>