MODON MRE BPDEV/force-app/main/default/objects/DirectDebit_Transactions__c/fields/RegResStatus__c.field-meta.xml
<CustomField>
    <fullName>RegResStatus__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RegResStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>