MODON MRE BPDEV/force-app/main/default/objects/DirectDebit_Transactions__c/fields/RegVIdStatus__c.field-meta.xml
<CustomField>
    <fullName>RegVIdStatus__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RegVIdStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>