MODON MRE BPDEV/force-app/main/default/objects/DirectDebit_Transactions__c/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <description>remarks sent on uploadPayments. Optional to the vendor, but it round-trips: absent from the upload and status responses, it reappears in the day-end reconciliation report, which makes it useful for matching.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>