MODON MRE BPDEV/force-app/main/default/objects/DirectDebit_Transactions__c/fields/Represented_Date__c.field-meta.xml
<CustomField>
    <fullName>Represented_Date__c</fullName>
    <description>When the most recent representment was submitted. The vendor retriggers a failed payment on the next working day, so this plus the count drives the retry policy.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Represented Date</label>
    <type>DateTime</type>
</CustomField>