MODON MRE BPDEV/force-app/main/default/objects/DirectDebit_Transactions__c/fields/Representment_Count__c.field-meta.xml
<CustomField>
    <fullName>Representment_Count__c</fullName>
    <description>How many times paymentRepresentment has been called for this payment. The vendor caps it at three and rejects the fourth. Guard on this locally: a refused fourth presentment is something the customer sees on their bank statement.</description>
    <label>Representment Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>