MODON MRE BPDEV/force-app/main/default/objects/DirectDebit_Transactions__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Registration</fullName>
            </value>
            <value>
                <fullName>Collection</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>UAEDDS Collection</fullName>
            </value>
            <value>
                <fullName>UAEDDS Representment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>