MODON MRE BPDEV/force-app/main/default/objects/DirectDebit_Transactions__c/fields/SOInstallment__c.field-meta.xml
<CustomField>
    <fullName>SOInstallment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Order Installment</label>
    <referenceTo>SalesOrderInstallments__c</referenceTo>
    <relationshipLabel>DirectDebit_Transactions</relationshipLabel>
    <relationshipName>DirectDebit_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>