MODON MRE BPDEV/force-app/main/default/objects/DirectDebit_Transactions__c/fields/UAEDDS_Payment_Id__c.field-meta.xml
<CustomField>
    <fullName>UAEDDS_Payment_Id__c</fullName>
    <description>The vendor id from records[].id. This is the correlation key for the whole payment lifecycle: it is the only identifier stable across uploadPayments, getPaymentReqStatus and getDDADailyReport, and it is also the paymentId taken by paymentRepresentment and getPmtBounceDemo. Not paymentRefNo, which comes back as a six digit suffix only and did not match what was sent.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>UAEDDS Payment Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>