MODON MRE BPDEV/force-app/main/default/objects/DirectDebit_Transactions__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DDA_Unique_Number__c</columns>
    <columns>Direct_Debit_Request__c</columns>
    <columns>Payer_Identification__c</columns>
    <columns>SOInstallment__c</columns>
    <columns>Transaction_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Payer_Identification__c</field>
        <operation>equals</operation>
        <value>001VH00000mK4AHa03VH00000fqPfd</value>
    </filters>
    <label>All</label>
</ListView>