MODON MRE BPDEV/force-app/main/default/objects/DirectDebit_Transactions__c/listViews/UAEDDS_Represented.listView-meta.xml
<ListView>
    <fullName>UAEDDS_Represented</fullName>
    <columns>NAME</columns>
    <columns>UAEDDS_Payment_Id__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Transaction_Status__c</columns>
    <columns>FT_Reference_No__c</columns>
    <columns>Representment_Count__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Gateway__c</field>
        <operation>equals</operation>
        <value>UAEDDS</value>
    </filters>
    <filters>
        <field>Representment_Count__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>UAEDDS - Represented</label>
</ListView>